# slurm

./: configure
auxdir/: x_ac_dcmi.m4
src/interfaces/: Makefile.am  gres.h  npu.c  npu.h
src/plugins/: Makefile.am
src/plugins/gres/: Makefile.am
src/plugins/gres/mygres/: Makefile.am  gres_mygres.c
src/plugins/npu/: Makefile.am
src/plugins/npu/dcmi/: Makefile.am  npu_dcmi.c
src/plugins/npu/generic/: Makefile.am  npu_generic.c
